moved index to root

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>Special Agent Test</title>
 </head>
 <body>
-<script src="bundle.js"></script>
+<script src="dist/bundle.js"></script>
 
 </body>
 </html>
